Modificando preguntas frecuentes haciendolas más cortas

--- a/index.html
+++ b/index.html
@@ -583,24 +583,7 @@
                     centrales de riesgo, afectando tu historial crediticio.
                   </p>
                 </div>
-              </div>
-              <div class="accordion__item">
-                <div class="accordion__item__header">
-                  ¿Por qué es importante eliminar las multas de tránsito
-                  prescritas?
-                </div>
-
-                <div class="accordion__item__content">
-                  <p>
-                    Eliminar las multas de tránsito prescritas es importante
-                    porque te libera de la obligación de pagarlas, evitando así
-                    posibles consecuencias legales y financieras. Además, una
-                    vez que se elimina la multa prescrita, podrás realizar
-                    trámites como la renovación de tu licencia de conducir o el
-                    traspaso de vehículos sin ningún problema.
-                  </p>
-                </div>
-              </div>
+              </div>              
               <div class="accordion__item">
                 <div class="accordion__item__header">
                   ¿Cómo sé si mis multas de tránsito son elegibles para
@@ -609,20 +592,10 @@
 
                 <div class="accordion__item__content">
                   <p>
-                    Para determinar si tus multas de tránsito son elegibles para
-                    prescripción, necesitamos analizar varios factores. En
-                    general, las multas de tránsito prescriben si han pasado 3
-                    años desde su imposición y no se ha notificado el
-                    mandamiento de pago. Si ya se notificó el mandamiento de
-                    pago, entonces tenemos hasta 6 años para solicitar la
-                    prescripción.
+                    Para saber si tus multas de tránsito pueden prescribir, es importante considerar dos factores clave: la fecha de la multa y el estado de la notificación del mandamiento de pago. En términos generales, las multas prescriben si no se ha notificado el mandamiento de pago en tres años desde su imposición. Si se notificó, el plazo se extiende a seis años. 
                   </p>
                   <p>
-                    Por eso es común que muchas de las multas emitidas entre los
-                    años 2000 y 2017 ya estén prescritas. La manera más fácil de
-                    averiguar si tus multas son elegibles para prescripción es
-                    mediante una consulta gratuita conmigo, en donde realizaré
-                    una evaluación detallada de tu situación.
+                    Por lo tanto, las multas de 2000 a 2017 son a menudo elegibles para prescripción.
                   </p>
                 </div>
               </div>
@@ -698,7 +671,7 @@
                 <div class="accordion__item__content">
                   <p>
                     Mi servicio de eliminación de multas por prescripción
-                    funciona en cuatro pasos esenciales:
+                    funciona en tres pasos esenciales:
                   </p>
                   <p>
                     1. Evaluación de multas: Lo primero que hago es revisar a
@@ -707,20 +680,10 @@
                     eliminación por prescripción.
                   </p>
                   <p>
-                    2. Planificación y ejecución de la estrategia legal: Si tus
-                    multas son elegibles, trazamos una estrategia y la llevamos
-                    a cabo. Este proceso implica la presentación de solicitudes
-                    formales (derecho de petición), y si no obtenemos respuesta,
-                    recurrimos a la acción de tutela.
-                  </p>
+                    2. Representación y Ejecución de la Estrategia Legal: Una vez confirmada la elegibilidad de tus multas, te representaré y llevaré a cabo el proceso legal necesario. Esto involucra la presentación de solicitudes formales como el derecho de petición, y si no recibimos respuesta, procederemos con la acción de tutela. Mi representación cubre todas las instancias necesarias en este proceso. A través de un sistema automatizado, el proceso se realiza de manera eficiente, permitiéndote ahorrar tiempo y minimizar el estrés.
+                  </p>                  
                   <p>
-                    3. Representación legal: Te representaré en todas las
-                    instancias necesarias durante este proceso. Gracias a un
-                    sistema automatizado, se realiza de manera eficiente,
-                    ahorrándote tiempo y estrés.
-                  </p>
-                  <p>
-                    4. Seguimiento y Asesoramiento: Mantendré un canal abierto
+                    3. Seguimiento y Asesoramiento: Mantendré un canal abierto
                     de comunicación contigo para mantenerte informado sobre el
                     progreso del caso y para proporcionarte asesoramiento sobre
                     cómo manejar el sistema de tránsito en el futuro.
