Se agrega una pregunt adicional en el sector de garantía y resultados y se corrige un pequeño error ortográfico

--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
                 declaradas prescritas. Pero, ¿qué significa esto para ti? Veamos.
                 
                 <br><br>              
-                1. Ahorro de dinero: Cuando las multas de tránsito son declaradas prescritas, legalmenta ya no tienes que pagarlas. Dependiendo de la cantidad y el monto de las multas, esto podría representar un ahorro sustancial.
+                1. Ahorro de dinero: Cuando las multas de tránsito son declaradas prescritas, legalmente ya no tienes que pagarlas. Dependiendo de la cantidad y el monto de las multas, esto podría representar un ahorro sustancial.
                 <br><br>
                 2. Eliminación del SIMIT: Tras obtener la resolución que declare
                 la prescripción, las multas serán eliminadas de tu historial en
@@ -586,22 +586,25 @@
               </div>              
               <div class="accordion__item">
                 <div class="accordion__item__header">
-                  ¿Cómo sé si mis multas de tránsito son elegibles para
+                  ¿Cómo sé si mis multas de tránsito se pueden eliminar mediante el proceso legal de prescripció elegibles para
                   prescripción?
                 </div>
 
                 <div class="accordion__item__content">
                   <p>
-                    Para saber si tus multas de tránsito pueden prescribir, es importante considerar dos factores clave: la fecha de la multa y el estado de la notificación del mandamiento de pago. En términos generales, las multas prescriben si no se ha notificado el mandamiento de pago en tres años desde su imposición. Si se notificó, el plazo se extiende a seis años. 
+                    Para saber si tus multas de tránsito se pueden eliminar por prescripción, 
+                    es importante considerar dos factores clave: la fecha de la multa y el estado de la notificación del mandamiento de pago. 
+                  </p>
+                  <p>En términos generales, las multas prescriben si no se ha notificado el mandamiento de pago en tres años desde la infracción. Si se notificó, el plazo se extiende a seis años. 
                   </p>
                   <p>
-                    Por lo tanto, las multas de 2000 a 2017 son a menudo elegibles para prescripción.
+                    Por lo tanto, las multas de 2000 a 2017 son a menudo elegibles para prescripción. Si quieres estar 100% seguro puedes solicitar un <a href="#asesoria">diagnóstico gratuito.</a>
                   </p>
                 </div>
               </div>
               <div class="accordion__item">
                 <div class="accordion__item__header">
-                  ¿Qué sucede si mis multas no son elegibles para prescripción?
+                  ¿Qué sucede si mis multas no se pueden eliminar por prescripción?
                 </div>
 
                 <div class="accordion__item__content">
@@ -680,7 +683,10 @@
                     eliminación por prescripción.
                   </p>
                   <p>
-                    2. Representación y Ejecución de la Estrategia Legal: Una vez confirmada la elegibilidad de tus multas, te representaré y llevaré a cabo el proceso legal necesario. Esto involucra la presentación de solicitudes formales como el derecho de petición, y si no recibimos respuesta, procederemos con la acción de tutela. Mi representación cubre todas las instancias necesarias en este proceso. A través de un sistema automatizado, el proceso se realiza de manera eficiente, permitiéndote ahorrar tiempo y minimizar el estrés.
+                    2. Representación y Ejecución de la Estrategia Legal: Una vez confirmada la elegibilidad de tus multas, 
+                    te representaré y llevaré a cabo el proceso legal necesario. Esto involucra la presentación de solicitudes formales 
+                    como el derecho de petición, y si no recibimos respuesta, procederemos con la acción de tutela. 
+                    Mi representación cubre todas las instancias necesarias en este proceso, que se lleva a cabo de manera completamente virtual. A través de un sistema automatizado, el proceso se realiza de manera eficiente, permitiéndote ahorrar tiempo y minimizar el estrés.
                   </p>                  
                   <p>
                     3. Seguimiento y Asesoramiento: Mantendré un canal abierto
@@ -749,8 +755,8 @@
                   <p>
                     Durante todo el proceso, mantendremos una comunicación
                     fluida y constante. Principalmente nos comunicaremos a
-                    través de correos electrónicos y mensajes de WhatsApp.
-                    Siempre podrás enviarme un mensaje o un correo si tienes
+                    través de mensajes de WhatsApp.
+                    Siempre podrás enviarme un mensaje si tienes
                     alguna pregunta o inquietud.
                   </p>
                 </div>
@@ -835,6 +841,22 @@ He llevado casos en todo el país, en especial Bogotá, Medellín, Cali, Barranq
                     Podrás renovar tu licencia, hacer traspasos de vehículos, y
                     lo más importante, podrás conducir sin preocupaciones.
                   </p>
+                </div>
+              </div>
+              <div class="accordion__item">
+                <div class="accordion__item__header">
+                  ¿Pueden las multas de tránsito, una vez eliminadas por prescripción, volver a aparecer en los registros del sistema?
+                </div>
+
+                <div class="accordion__item__content">
+                  <p>
+                    Una vez las multas sean declaradas prescritas y eliminadas del sistema no pueden volver a aparecer. A continuación te explico en detalle.
+
+                  </p>
+                  <p>
+                    <strong>• Enfoque Legal:</strong> Según la Ley colombiana (Ley 1437 de 2011, Artículo 97), una vez que se cambia una situación legal de manera oficial, como en el caso de la prescripción de una multa de tránsito, ese cambio es definitivo. No puede ser anulado sin tu permiso por escrito.
+                  </p>
+                  <p><strong>• Implicaciones para ti:</strong> En términos simples, una vez que tus multas de tránsito son eliminadas por prescripción, no deberían volver a aparecer en los registros. Esto es así porque tú, como titular de esa situación legal, debes dar tu consentimiento para que cualquier cambio sea revertido, lo que significa que sin tu permiso, las multas no pueden volver a ser impuestas.</p>
                 </div>
               </div>
               <br>
