por favor subete

--- a/index.html
+++ b/index.html
@@ -586,8 +586,7 @@
               </div>              
               <div class="accordion__item">
                 <div class="accordion__item__header">
-                  ¿Cómo sé si mis multas de tránsito se pueden eliminar mediante el proceso legal de prescripció elegibles para
-                  prescripción?
+                  ¿Cómo sé si mis multas de tránsito se pueden eliminar mediante el proceso legal de prescripción?
                 </div>
 
                 <div class="accordion__item__content">
