--- a/index.html
+++ b/index.html
@@ -666,8 +666,7 @@
               <br>
               <div class="accordion__item">
                 <div class="accordion__item__header">
-                  ¿Cómo funciona el servicio de eliminación de multas por
-                  prescripción?
+                  ¿Cómo es el proceso?
                 </div>
 
                 <div class="accordion__item__content">
