--- a/index.html
+++ b/index.html
@@ -531,6 +531,71 @@
         <main>
           <div class="container">
             <div class="accordion">
+              <h2><strong>TOP 5</strong></h2>
+              <br>
+              <div class="accordion__item">
+                <div class="accordion__item__header">
+                  ¿Dónde estás ubicado?
+                </div>
+
+                <div class="accordion__item__content">
+                  <p>
+                    Estoy ubicado en la ciudad de Riohacha, Calle 14a # 10-92. He llevado casos en todo el país, en especial Bogotá, Medellín, Cali, Barranquilla y Cartagena.
+                  </p>                  
+                </div>
+              </div>
+              <div class="accordion__item">
+                <div class="accordion__item__header">
+                  ¿Hay garantía del servicio legal de prescripción?
+                </div>
+
+                <div class="accordion__item__content">
+                  <p>
+                    Entiendo completamente que contratar un abogado para eliminar tus multas de tránsito es una inversión y que deseas seguridad en el proceso. Por eso, te ofrezco una garantía de devolución de dinero.
+                  </p>
+                  <p>Si después de todo nuestro esfuerzo legal, el proceso no resulta exitoso, te devolveré el dinero que hayas invertido en mi servicio, reteniendo solamente $100.000 para cubrir los costos administrativos y el tiempo invertido en el estudio inicial de tu caso.</p>                  
+                </div>
+              </div>
+              <div class="accordion__item">
+                <div class="accordion__item__header">
+                  ¿Cuál es el costo de tus servicios legales?
+                </div>
+
+                <div class="accordion__item__content">
+                  <p>
+                    El costo de mis servicios legales es proporcional al valor de tus multas de tránsito. Normalmente, oscila entre el 10% y el 30% del valor total de tus multas. En general, cuanto mayor sea el monto de la multa, menor será el porcentaje que se te cobrará.
+                  </p>
+                  <p>Por ejemplo, si la multa es de alto valor, el porcentaje cobrado puede ser cercano al 10%, mientras que para multas de menor valor, este porcentaje podría acercarse al 30%. Cada caso es único y trabajaremos juntos para determinar la tarifa más justa y equitativa posible.</p>                  
+                </div>
+              </div>
+              <div class="accordion__item">
+                <div class="accordion__item__header">
+                  ¿Tengo que pagar por adelantado?
+                </div>
+
+                <div class="accordion__item__content">
+                  <p>
+                    Sí, se requiere un pago anticipado para iniciar el proceso. Si el costo total del proceso es de $600.000 o menos, se debe pagar la totalidad por adelantado. Si el costo es superior a $600.000, puedes optar por pagar el 50% al inicio y el restante 50% al finalizar el proceso.
+                  </p>
+                  <p>Esta estructura de pago me permite dedicarle a tu caso el tiempo y los recursos necesarios para buscar la mejor solución posible. Si tienes más preguntas sobre los detalles de pago, me la puedes hacer en la videollamada directa que tendré contigo.</p>
+                </div>
+              </div>
+              <div class="accordion__item">
+                <div class="accordion__item__header">
+                  ¿Pueden las multas de tránsito, una vez eliminadas por prescripción, volver a aparecer en los registros del sistema?
+                </div>
+
+                <div class="accordion__item__content">
+                  <p>
+                    Una vez las multas sean declaradas prescritas y eliminadas del sistema no pueden volver a aparecer. A continuación te explico en detalle.
+                  </p>
+                  <p><strong>• Enfoque Legal:</strong> Según la Ley colombiana (Ley 1437 de 2011, Artículo 97), una vez que se cambia una situación legal de manera oficial, como en el caso de la prescripción de una multa de tránsito, ese cambio es definitivo. No puede ser anulado sin tu permiso por escrito.
+                  </p>
+                  <p><strong>• Implicaciones para ti: </strong>En términos simples, una vez que tus multas de tránsito son eliminadas por prescripción, no deberían volver a aparecer en los registros. Esto es así porque tú, como titular de esa situación legal, debes dar tu consentimiento para que cualquier cambio sea revertido, lo que significa que sin tu permiso, las multas no pueden volver a ser impuestas.
+                  </p>                  
+                </div>
+              </div>
+              <br>  
               <h2><strong>Conceptos básicos y Viabilidad del Proceso:</strong></h2>
               <br>
               <div class="accordion__item">
