cambie la dirección de correo electrónico a la cual redirige

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                         <input
                           type="hidden"
                           name="_next"
-                          value="https://darwin12jj.github.io/Alexander_Sierra_page/"
+                          value="https://sierraabogados.com.co/"
                         />
                         <input type="hidden" name="_captcha" value="false" />
                       </form>
