--- a/index.html
+++ b/index.html
@@ -69,21 +69,17 @@
                 <ol class="list-group">
                   <li class="group-item">
                     <p>
-                      1. Libérate de multas millonarias y embargos. Recupera tu
-                      tranquilidad.
+                      1. Sin anticipos ni adelantos. Solo pagas por resultados.
                     </p>
                   </li>
                   <li class="group-item">
                     <p>
-                      2. Saca tu licencia de conducción por primera vez o
-                      renueva la que tienes vencida.
+                      2. Libérate de multas millonarias y embargos. 
                     </p>
                   </li>
                   <li class="group-item">
                     <p>
-                      3. Trato directo con tu abogado experto, no un tramitador.
-                      Benefíciate de 15 minutos exclusivos de videollamada para
-                      una asesoría legal de calidad.
+                      3. Saca ya tu licencia de conducción. 
                     </p>
                   </li>
                 </ol>
@@ -835,17 +831,10 @@
 
                 <div class="accordion__item__content">
                   <p>
-                    Entiendo completamente que contratar un abogado para
-                    eliminar tus multas de tránsito es una inversión y que
-                    deseas seguridad en el proceso. Por eso, te ofrezco una
-                    garantía de devolución de dinero.
+                    Sí, la garantía es que solo pagarás una vez que las multas sean eliminadas y obtengamos una resolución favorable del tránsito.
                   </p>
                   <p>
-                    Si después de todo nuestro esfuerzo legal, el proceso no
-                    resulta exitoso, te devolveré el dinero que hayas invertido
-                    en mi servicio, reteniendo solamente $100.000 para cubrir
-                    los costos administrativos y el tiempo invertido en el
-                    estudio inicial de tu caso.
+                    Si, tras nuestro esfuerzo legal, no logramos el resultado esperado, no deberás pagar por el servicio.
                   </p>
                 </div>
               </div>
@@ -855,9 +844,9 @@
                 </div>
                 <div class="accordion__item__content">
                   <p>
-                    Estoy localizado en la ciudad de Riohacha, Calle 14a # 10-92.
+                    Estoy localizado en la ciudad de Riohacha, La Guaira.
 
-He llevado casos en todo el país, en especial Bogotá, Medellín, Cali, Barranquilla y Cartagena.
+Atiendo casos en todo el país, en especial Bogotá, Medellín, Cali, Barranquilla y Cartagena.
                   </p>                  
                 </div>
 
@@ -955,18 +944,13 @@ He llevado casos en todo el país, en especial Bogotá, Medellín, Cali, Barranq
 
                 <div class="accordion__item__content">
                   <p>
-                    Sí, se requiere un pago anticipado para iniciar el proceso.
-                    Si el costo total del proceso es de $600.000 o menos, se
-                    debe pagar la totalidad por adelantado. Si el costo es
-                    superior a $600.000, puedes optar por pagar el 50% al inicio
-                    y el restante 50% al finalizar el proceso.
+                    No es necesario un pago por adelantado para iniciar el proceso. 
+                    Solo se realizará un pago al finalizar el proceso, 
+                    cuando se haya logrado la eliminación de las multas y se obtenga una resolución favorable
                   </p>
                   <p>
-                    Esta estructura de pago me permite dedicarle a tu caso el
-                    tiempo y los recursos necesarios para buscar la mejor
-                    solución posible. Si tienes más preguntas sobre los detalles
-                    de pago, me la puedes hacer en la videollamada directa que
-                    tendré contigo.
+                    Esta política asegura que mi enfoque esté completamente alineado con tus resultados y tu satisfacción. 
+                    
                   </p>
                 </div>
               </div>
